--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.0
   image_picker: ^0.8.5+3
+  provider: ^6.0.3
+  uuid: ^3.0.6
+  intl: ^0.17.0
+  flutter_staggered_grid_view: ^0.4.1
+  flame: ^1.2.0
 
 dev_dependencies:
   flutter_test:
